--- a/src/components/CryptoDataTable.css
+++ b/src/components/CryptoDataTable.css
@@ -22,7 +22,7 @@ td {
 
 .middle {
     display: flex;
-    justify-content: center;
+    /* justify-content: center; */
     align-items: center;
 }
 
