--- a/src/components/CryptoDataTable.css
+++ b/src/components/CryptoDataTable.css
@@ -55,11 +55,19 @@ img {
     }
 
     td {
+        display: flex;
+        justify-content: space-between;
         border: none;
     }
 
     th {
         display: none;
+    }
+
+    .middle {
+        display: flex;
+        justify-content: center;
+        align-items: center;
     }
 
     tr {
@@ -69,4 +77,25 @@ img {
     .numberAlignment {
         text-align: center;
     }
+
+    td:nth-of-type(1):before {
+        content: "#";
+    }
+
+    td:nth-of-type(2):before {
+        content: "Coin";
+    }
+
+    td:nth-of-type(3):before {
+        content: "Price";
+    }
+
+    td:nth-of-type(4):before {
+        content: "Net Change(24h";
+    }
+
+    td:nth-of-type(5):before {
+        content: "Net Change(7d)";
+    }
+    
 }
